fix: PopupModal overlay behind Header

--- a/src/components/General/Modals/PopupModal.module.scss
+++ b/src/components/General/Modals/PopupModal.module.scss
@@ -35,6 +35,7 @@
 	background-color: rgba(black, 0.5);
 	-webkit-backdrop-filter: blur(10px);
 	backdrop-filter: blur(10px);
+	z-index: 2;
 
 	opacity: 0;
 	transition: opacity v.$modal-transition-duration ease-in-out;
